--- a/pom.xml
+++ b/pom.xml
@@ -5,4 +5,11 @@
   <version>1.0.0-SNAPSHOT</version>
   <name>JLU</name>
   <description>General purpose sparse LU decoomposition in Java</description>
+  <dependencies>
+  	<dependency>
+  		<groupId>com.googlecode.netlib-java</groupId>
+  		<artifactId>netlib-java</artifactId>
+  		<version>0.9.3</version>
+  	</dependency>
+  </dependencies>
 </project>
