--- a/pom.xml
+++ b/pom.xml
@@ -11,5 +11,10 @@
   		<artifactId>netlib-java</artifactId>
   		<version>0.9.3</version>
   	</dependency>
+  	<dependency>
+  		<groupId>com.github.rwl</groupId>
+  		<artifactId>COLAMDJ</artifactId>
+  		<version>1.0.1</version>
+  	</dependency>
   </dependencies>
 </project>
